# imresh

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CodingStyleSuggestions.md  Doxyfile.in  Hack  LICENSE  Makefile  Notes-Alpaka.md  Notes-Alpaka.txt  README.md  buildcuda.sh  compile.sh  convertToCupla.sh  cuda-wrong-fmin-overloading-compiler-warning.txt  main.cpp
basics/: Makefile  basic-theory.tex  cudacommon.cu  cudacommon.h  dcft.cpp  dcft.h  definitions.tex  dft.cpp  dft.h  gaussian.cpp  gaussian.h  main.cpp  mainTestAll.cpp  mainUnderstandHybridInputOutput.cpp  mainUnderstandShrinkWrap.cpp  sdlcommon.cpp  sdlcommon.h  sdlplot.cpp  sdlplot.h
basics/colors/: Makefile  conversions.cpp  conversions.h  x11Colors.cpp  x11Colors.h
basics/examples/: createAtomCluster.cpp
basics/math/fouriertransform/: dcft.cpp  dcft.h  dft.cpp  dft.h
basics/math/image/: cudaGaussian.cu  cudaGaussian.h  gaussian.cpp  gaussian.h
basics/math/matrix/: matrixInvertGaussJacobi.cpp  matrixInvertGaussJacobi.h
basics/math/numeric/: integrate.cpp  integrate.h
basics/math/vector/: vectorReduce.cpp  vectorReduce.h
basics/numeric/: initwiab.cpp  integrate.cpp
basics/sdl/: complexPlot.cpp  complexPlot.h  sdlcommon.cpp  sdlcommon.h  sdlcommon.tpp  sdlplot.cpp  sdlplot.h  sdlplot.tpp
basics/tests/: testColors.cpp  testColors.h  testDcft.cpp  testDft.cpp  testDft.h  testFftw.cpp  testFftw.h  testFftw2d.cpp  testGaussian.cpp  testGaussian.h  testGaussian2d.cpp  testGaussian2d.cu  testGaussian2d.h  testMatrixInvertGaussJacobi.cpp  testSdlPlot.cpp
benchmark/imresh/algorithms/: vectorReduce.cpp  vectorReduce.tpp
benchmark/imresh/algorithms/cuda/: cudaGaussian.cpp  cudaGaussian.cu  cudaGaussian.hpp  cudaGaussian.tpp  cudaShrinkWrap.cpp  cudaShrinkWrap.cu  cudaShrinkWrap.hpp  cudaVectorReduce.cpp  cudaVectorReduce.cu  cudaVectorReduce.hpp  cudaVectorReduce.tpp
cmake/: FindFFTW.cmake  FindSplash.cmake  README
examples/: convertFloatArrayToPng.py  createAtomCluster.cpp  createAtomCluster.h  createAtomCluster.hpp  createSlit.cpp  createSlit.hpp  imresh_0_0_0.h5  main.cpp  mainOld.cpp  miniExample.cpp  outputExampleCreation.cpp  threadedExample.cpp  todo.txt
examples/createTestData/: createAtomCluster.cpp  createAtomCluster.hpp  createCheckerboard.cpp  createCheckerboard.hpp  createCircularSection.cpp  createCircularSection.hpp  createRectangle.cpp  createRectangle.hpp  createSlit.cpp  createSlit.hpp  rotateCoordinates.cpp  rotateCoordinates.hpp
src/: CMakeLists.txt  Makefile  main.cpp
src/examples/: Makefile
src/imresh/: CMakeLists.txt  Makefile  hybridInputOutput.cpp  hybridInputOutput.h  main.cpp  shrinkWrap.cpp  shrinkWrap.h  vectorElementwise.cpp
src/imresh/algorithms/: Makefile  diffractionIntensity.cpp  diffractionIntensity.h  gaussian.cpp  gaussian.h  intensity.cpp  shrinkWrap.cpp  shrinkWrap.hpp  vectorElementwise.cpp  vectorElementwise.h  vectorElementwise.hpp  vectorElementwise.tpp  vectorIndex.cpp  vectorIndex.h  vectorReduce.cpp  vectorReduce.h  vectorReduce.hpp  vectorReduce.tpp
src/imresh/algorithms/alpaka/: convertToCupla.sh  vectorElementwise.cpp  vectorElementwise.hpp  vectorElementwise.tpp  vectorReduce.cpp  vectorReduce.hpp  vectorReduce.tpp
src/imresh/algorithms/cuda/: Makefile  cudaGaussian.cpp  cudaGaussian.cu  cudaGaussian.h  cudaGaussian.hpp  cudaGaussian.tpp  cudaShrinkWrap.cpp  cudaShrinkWrap.cu  cudaShrinkWrap.h  cudaShrinkWrap.hpp  cudaVectorElementwise.cpp  cudaVectorElementwise.cu  cudaVectorElementwise.hpp  cudaVectorElementwise.tpp  cudaVectorReduce.cpp  cudaVectorReduce.cu  cudaVectorReduce.hpp  cudaVectorReduce.tpp  cudacommon.cu  cudacommon.h
src/imresh/algorithms/phasereconstruction/: Makefile  hybridInputOutput.cpp  hybridInputOutput.h  shrinkWrap.cpp  shrinkWrap.h
src/imresh/colors/: Makefile  conversions.cpp  conversions.h  x11Colors.cpp  x11Colors.h
src/imresh/cuda/: cudaShrinkWrap.cu  cudaShrinkWrap.h
src/imresh/examples/: Makefile  createAtomCluster.cpp  createAtomCluster.h  createSlit.cpp  createSlit.h
src/imresh/hal/: stream.cpp  stream.hpp
src/imresh/io/: ReadTiff.cpp  ReadTiff.hpp  taskQueue.cpp  taskQueue.cu  taskQueue.hpp
src/imresh/io/readInFuncs/: readInFuncs.cpp  readInFuncs.hpp
src/imresh/io/writeOutFuncs/: writeOutFuncs.cpp  writeOutFuncs.hpp
src/imresh/libs/: CudaKernelConfig.cpp  CudaKernelConfig.hpp  alpaka_T_ACC.hpp  calcGaussianKernel.cpp  calcGaussianKernel.hpp  calcGaussianKernel.tpp  checkCufftError.cpp  checkCufftError.hpp  cudacommon.cpp  cudacommon.cu  cudacommon.h  cudacommon.hpp  cufft_to_cupla.hpp  diffractionIntensity.cpp  diffractionIntensity.hpp  fftShift.cpp  fftShift.hpp  gaussian.cpp  gaussian.hpp  gaussian.tpp  hybridInputOutput.cpp  hybridInputOutput.hpp  vectorIndex.cpp  vectorIndex.hpp
src/imresh/libs/cufftToCupla/: cuComplex.hpp  runtime.hpp
src/imresh/sdlcommon/: Makefile  complexPlot.cpp  complexPlot.h  sdlcommon.cpp  sdlcommon.h  sdlplot.cpp  sdlplot.h  sdlplot.tpp
src/imresh/tests/: Hack  Makefile  mainTestAll.cpp  mainTestAllCuda.cpp  testCudaShrinkWrap.cpp  testCudaShrinkWrap.h  testDiffractionIntensity.cpp  testDiffractionIntensity.h  testGaussian.cpp  testGaussian.h  testGaussian2d.cu  testGaussian2d.h  testHybridInputOutput.cpp  testHybridInputOutput.h  testShrinkWrap.cpp  testShrinkWrap.h  testVectorIndex.cpp  testVectorIndex.h
src/libs/: Makefile  diffractionIntensity.cpp  diffractionIntensity.h  gaussian.cpp  gaussian.h  vectorIndex.cpp  vectorIndex.h
tests/: CMakeLists.txt  benchmarkHelper.cpp  benchmarkHelper.hpp  mainTestAll.cpp  testAtomCluster.cpp  testVectorReduce.cpp
tests/imresh/algorithms/: profileGaussian.cpp  profileVectorReduce.cpp  testFft.cpp  testFft.hpp  testGaussian.cpp  testGaussian.hpp  testShrinkWrap.cpp  testShrinkWrap.hpp  testVectorElementwise.cpp  testVectorElementwise.hpp  testVectorReduce.cpp  testVectorReduce.cu  testVectorReduce.hpp
tests/imresh/io/: testReadWrite.cpp  testReadWrite.hpp
tests/imresh/libs/: testVectorIndex.cpp  testVectorIndex.hpp
tex/: timetable.tex
tex/convolutionBlur/: fourier-convolve.tex
